v0.27 - flavors